--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -51,9 +51,9 @@
 
     <div class="footer-column footer-locations-col">
       <h4>Address</h4>
-      <a href="https://www.google.com/maps?q=Kuala+Lumpur+Malaysia" target="_blank" rel="noopener noreferrer">📍 Melbourne, Australia</a>
-      <a href="mailto:rsbusinesstech@gmail.com">✉️lashmapbeautystudio@gmail.com</a>
-      <a href="tel:+601114278964">📞+61411158881</a>
+      <a href="https://www.google.com/maps?q=Melbourne+Australia" target="_blank" rel="noopener noreferrer">📍View on Google Map</a>
+      <a href="mailto:rsbusinesstech@gmail.com">✉️Send Email</a>
+      <a href="tel:+601114278964">📞Call now</a>
     </div>
   </div>
 
