removed slide show, applied video

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,5 +1,5 @@
 .site-header {
-  background-color:  #4b2b2c;
+  background-color:   #eba5a5;
   color: #fff;
   padding: 1rem 0;
 }
@@ -16,6 +16,7 @@
 
 .site-header .container .logo img {
   height: 50px;
+  width: 150px;
 }
 
 .site-header .container .menu-toggle {
