--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: #000;
+  background-color:  #94948b;;
   padding: 40px 20px 20px 20px;
   max-width: 1600px;
   margin: 0 auto;
@@ -8,7 +8,7 @@
 
 /* Make the entire background around the footer black */
 .footer-wrapper {
-  background-color: #000;
+  background-color:  #94948b;;
   width: 100%;
 }
 
@@ -20,14 +20,14 @@
 }
 
 body {
-  background-color: #000;
+  background-color:  #94948b;;
   color: #fff;
   margin: 0;
   padding: 0;
 }
 
 .footer-container {
-  background-color: #000;
+  background-color:  #94948b;;
   padding: 40px 20px 20px 20px;
   max-width: 1600px;
   margin: 0 auto;
@@ -57,7 +57,8 @@ body {
 }
 
 .connect-us {
-  color: #e0cd91;
+  /* color: #e0cd91; */
+  color: #000;
   font-weight: bold;
   margin-bottom: 15px;
 }
@@ -86,14 +87,15 @@ body {
 }
 
 .footer-section h3 {
-  color: #e0cd91;
+  /* color: #f0c331; */
+  color: #000;
   margin-bottom: 15px;
   font-weight: bold;
   text-transform: uppercase;
   position: relative;
   display: inline-block;
   padding-bottom: 5px;
-  font-family: Liberation Sans;
+  /* font-family: Liberation Sans; */
 }
 
 /* Underline effect */
@@ -132,6 +134,7 @@ body {
 }
 
 .footer-section ul li a {
+  /* color: #fff; */
   color: #fff;
   text-decoration: none;
 }
@@ -192,7 +195,8 @@ body {
   .connect-us {
     font-weight: normal;
     margin-bottom: 12px;
-    color: #e0cd91;
+    /* color: #e0cd91; */
+    color: #000;
   }
 
   .social-icons {
