--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,5 +1,6 @@
 .site-header {
-  background-color:   #eba5a5;
+  /* background-color:   #eba5a5; */
+  background-color:   #94948b;
   color: #fff;
   padding: 1rem 0;
 }
