--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,11 +7,13 @@
     <nav class="nav-links" [class.mobile-menu-open]="menuOpen">
       <a routerLink="/">Home</a>
       <a routerLink="/about">About us</a>
+      <!-- <a routerLink="/products">Free Consultation</a>  -->
       <a routerLink="/products">Products</a>
       <a routerLink="/services">Services</a>
       <a routerLink="/bookAppointment">Book Appointment</a>
       <a routerLink="/specialOffers">Special Offers</a>
       <a routerLink="/contact">Contact us</a>
+      
     </nav>
 
     <button class="menu-toggle" (click)="menuOpen = !menuOpen">
