--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -148,6 +148,7 @@ body {
   text-align: center;
   font-size: 13px;
   color: #ccc;
+  margin-top: 10px;
 }
 
 /* Hide desktop logo-connect on mobile */
