--- a/src/app/features/services/components/services/services.component.html
+++ b/src/app/features/services/components/services/services.component.html
@@ -1,1 +1,34 @@
-<p>services works!</p>
+<div class="services-section">
+  <h2 class="section-title">Our Services</h2>
+
+  <div class="services-container">
+    <div *ngFor="let category of serviceCategories" class="category">
+      <h3>{{ category.category }}</h3>
+
+      <div *ngFor="let service of category.services" class="service-card">
+        <!-- Image -->
+        <img [src]="service.image" [alt]="service.name" class="service-image" />
+
+        <!-- Details -->
+        <div class="service-details">
+          <h4>{{ service.name }}</h4>
+          <p>{{ service.description }}</p>
+
+          <div class="pricing">
+            <span *ngIf="service.juniorPrice">Junior {{ service.juniorPrice }}</span>
+            <span *ngIf="service.seniorPrice"> | Senior {{ service.seniorPrice }}</span>
+            <span *ngIf="service.price">{{ service.price }}</span>
+          </div>
+
+          <small>{{ service.duration }}</small>
+
+          <!-- Links -->
+          <div class="links">
+            <a [href]="service.bookUrl" class="book-link">Book Appointment</a>
+            <a [href]="service.readUrl" class="read-link">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
