--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -54,13 +54,11 @@
     <div class="footer-section services-section">
       <h3>OUR SERVICES</h3>
       <ul>
-        <li><a href="/services">Website Development</a></li>
-        <li><a href="/services">Business Software Solutions</a></li>
-        <li><a href="/services">Mobile App Development</a></li>
-        <li><a href="/services">Technical Consultation</a></li>
-        <li><a href="/services">Search Engine Optimization (SEO)</a></li>
-        <li><a href="/services">Logo Designing</a></li>
-        <li><a href="/services">QR Codes</a></li>
+        <li><a href="/services">Eyebrow Services</a></li>
+        <li><a href="/services">Lash & Brow Services</a></li>
+        <li><a href="/services">Waxing Services</a></li>
+        <li><a href="/services">Eyelash Extensions</a></li>
+        <li><a href="/services">Hybrid Eyelash Extensions</a></li>
       </ul>
 
       <!-- Connect with us + Social icons + Logo (Mobile Only) -->
