--- a/src/app/features/about/components/about/about.component.css
+++ b/src/app/features/about/components/about/about.component.css
@@ -19,7 +19,32 @@
   font-weight: bold;
   color: #000;
   margin-bottom: 20px;
+  margin-left: 30px;
   text-align: left;
+  animation: slideInLeft 5s ease-in-out 0.1s infinite; /* delay of 0.5s with frequency of 5sec */
+}
+
+/* Animation Keyframes */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .about-image {
@@ -60,7 +85,26 @@
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 10px;
+  animation: bounceIn 5s ease-in-out 0.2s infinite;
 }
+
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  60% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  80% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 
 .location-subheading {
   font-size: 16px;
@@ -161,6 +205,7 @@
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 40px;
+  animation: fadeIn 5s ease-in-out 0.2s infinite; /* delay of 0.5s with frequency of 5sec */
 }
 
 .staff-cards {
