--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -54,11 +54,11 @@
     <div class="footer-section services-section">
       <h3>OUR SERVICES</h3>
       <ul>
-        <li><a href="/services">Eyebrow Services</a></li>
-        <li><a href="/services">Lash & Brow Services</a></li>
-        <li><a href="/services">Waxing Services</a></li>
-        <li><a href="/services">Eyelash Extensions</a></li>
-        <li><a href="/services">Hybrid Eyelash Extensions</a></li>
+       <li><a [routerLink]="['/services']" [fragment]="'eyebrow-services'">Eyebrow Services</a></li>
+       <li><a [routerLink]="['/services']" [fragment]="'lash-brow-services'">Lash & Brow Services</a></li>
+       <li><a [routerLink]="['/services']" [fragment]="'waxing-services'">Waxing Services</a></li>
+       <li><a [routerLink]="['/services']" [fragment]="'eyelash-extensions'">Eyelash Extensions</a></li>
+       <li><a [routerLink]="['/services']" [fragment]="'hybrid-eyelash-extensions'">Hybrid Eyelash Extensions</a></li>
       </ul>
 
       <!-- Connect with us + Social icons + Logo (Mobile Only) -->
