Added Go Back button

--- a/src/app/features/contact/components/contact/contact.component.html
+++ b/src/app/features/contact/components/contact/contact.component.html
@@ -22,4 +22,8 @@
       <button type="submit" [disabled]="contactForm.invalid">Send Email</button>
     </form>
   </div>
+
+  <div class="cta-area">
+    <a class="btn-primary" (click)="goBack()">← Go Back</a>
+  </div>
 </section>
