--- a/src/app/features/about/components/about/about.component.css
+++ b/src/app/features/about/components/about/about.component.css
@@ -17,7 +17,7 @@
 .about-heading {
   font-size: 36px;
   font-weight: bold;
-  color: #000;
+  color: #830707;
   margin-bottom: 20px;
   margin-left: 30px;
   text-align: left;
@@ -67,7 +67,7 @@
   padding: 30px 20px; /* Reduced padding */
   display: flex;
   justify-content: center;
-  color: #000;
+  color: #830707;
 }
 
 /* Container box */
@@ -206,6 +206,7 @@
   font-weight: bold;
   margin-bottom: 40px;
   animation: fadeIn 5s ease-in-out 0.2s infinite; /* delay of 0.5s with frequency of 5sec */
+  color: #830707;
 }
 
 .staff-cards {
@@ -286,5 +287,42 @@
   .staff-bio {
     font-size: 14px;
   }
+}
+
+  /* -------------------------- */
+/* Call To Action Button */
+/* -------------------------- */
+.cta-area {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  
+}
+
+/* Section background */
+.cta {
+  background-color: #f9f5e3;
+  padding: 30px 20px; /* Reduced padding */
+  display: flex;
+  justify-content: center;
+  color: #000;
+}
+
+.btn-primary {
+  background-color: #a03d72;
+  color: #fff;
+  padding: 12px 28px;
+  border: none;
+  border-radius: 50px;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #746f67;
 }
 
