--- a/src/app/features/about/components/about/about.component.html
+++ b/src/app/features/about/components/about/about.component.html
@@ -78,5 +78,11 @@
   </div>
 </section>
 
+<section class="cta">
+  <div class="cta-area">
+    <a class="btn-primary" (click)="goBack()">← Go Back</a>
+  </div>
+</section>
+
 
 
