--- a/src/app/features/contact/components/contact/contact.component.css
+++ b/src/app/features/contact/components/contact/contact.component.css
@@ -15,7 +15,7 @@
 .contact-section .container h2 {
   text-align: center;
   color: #830707;
-  font-size: 2.5rem;
+  font-size: 2.0rem;
   animation: fadeIn 5s ease-in-out 0.2s infinite; /* delay of 0.5s with frequency of 5sec */
 }
 
@@ -96,4 +96,30 @@
   .contact-section .container h2 {
     font-size: 1.5rem;
   }
+}
+
+  /* -------------------------- */
+/* Call To Action Button */
+/* -------------------------- */
+.cta-area {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.btn-primary {
+  background-color: #a03d72;
+  color: #fff;
+  padding: 12px 28px;
+  border: none;
+  border-radius: 50px;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #746f67;
 }
