--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -55,7 +55,7 @@
 <section class="home-about-preview" aria-labelledby="about-heading">
   <div class="about-content">
     <h2 id="about-heading">ABOUT US</h2>
-    <p>
+    <p class="intro">
       We at LashMap Beauty Studio are dedicated to provide the best beauty services tailored just for you. Our experienced team ensures every visit is a pampering experience.  
     </p>
     <div class="owners">
