--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -32,9 +32,9 @@
      <ul>
         <li><a href="/home">Home</a></li>
         <li><a href="/about">About us</a></li>
-         <li><a href="/products">Products</a></li>
+        <li><a href="/products">Products</a></li>
         <li><a href="/services">Services</a></li>
-        <li><a href="/bookAppointment">Book Appointment</a></li>
+        <li><a href="/booking">Book Appointment</a></li>
         <li><a href="/specialOffers">Special Offers</a></li>
         <li><a href="/contact">Contact us</a></li>
       </ul>
