--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,7 +10,7 @@
       <!-- <a routerLink="/products">Free Consultation</a>  -->
       <a routerLink="/products">Products</a>
       <a routerLink="/services">Services</a>
-      <a routerLink="/bookAppointment">Book Appointment</a>
+      <a routerLink="/booking">Book Appointment</a>
       <a routerLink="/specialOffers">Special Offers</a>
       <a routerLink="/contact">Contact us</a>
       
