--- a/src/app/features/booking/components/booking/booking.component.html
+++ b/src/app/features/booking/components/booking/booking.component.html
@@ -23,12 +23,12 @@
         [(ngModel)]="booking.email"
       />
 
-      <label for="phone">Phone</label>
+      <label for="phone">Phone Number</label>
       <input
         type="text"
         id="phone"
         name="phone"
-        placeholder="Your Phone"
+        placeholder="Your Phone Number"
         required
         [(ngModel)]="booking.phone"
       />
