--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -83,14 +83,18 @@
         </div>
         <img class="footer-logo-mobile" src="/assets/icons/logo-lashmapbeautystudio.png" alt="RS BusinessTech Logo" />
         <div class="footer-bottom">
-          &copy; 2025 LashMap Beauty Studio (All rights reserved).
+          <strong>&copy; 2025 LashMap Beauty Studio (All rights reserved)</strong>
         </div>
       </div>
     </div>
   </div>
 
   <div class="footer-bottom">
-    &copy; 2025 LashMap Beauty Studio (All rights reserved).
+    <strong>&copy; 2025 LashMap Beauty Studio (All rights reserved)</strong>
+  </div>
+  <div class="developer-credit">
+     Powered by RS BusinessTech<br>
+    <a href="https://www.rsbusinesstech.com" target="_blank">(www.rsbusinesstech.com)</a>
   </div>
 </footer>
 </div>
