--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -147,7 +147,7 @@ body {
 .footer-bottom {
   text-align: center;
   font-size: 13px;
-  color: #ccc;
+  color: #000;
   margin-top: 10px;
 }
 
@@ -244,6 +244,26 @@ body {
   text-decoration: underline;
   color: red; /* Add this */
 }
+
+.developer-credit {
+  text-align: center;
+  font-size: 12px;
+  color: white;
+  margin-top: 20px;
+}
+
+.developer-credit a {
+  color:white;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.developer-credit a:hover {
+  color: red;
+  text-decoration: underline;
+}
+
+
 
 
 
