--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -93,8 +93,10 @@
     <strong>&copy; 2025 LashMap Beauty Studio (All rights reserved)</strong>
   </div>
   <div class="developer-credit">
-     Powered by RS BusinessTech<br>
-    <a href="https://www.rsbusinesstech.com" target="_blank">(www.rsbusinesstech.com)</a>
-  </div>
+     Powered by: 
+   <a href="https://www.rsbusinesstech.com" target="_blank" class="credit-link">RS BusinessTech</a><br>
+   <a href="https://www.rsbusinesstech.com" target="_blank">(www.rsbusinesstech.com)</a>
+ </div>
+
 </footer>
 </div>
