--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,10 +8,10 @@
       <a routerLink="/">Home</a>
       <a routerLink="/about">About us</a>
       <!-- <a routerLink="/products">Free Consultation</a>  -->
-      <a routerLink="/products">Products</a>
+      <!-- <a routerLink="/products">Products</a> -->
       <a routerLink="/services">Services</a>
       <a routerLink="/booking">Book Appointment</a>
-      <a routerLink="/specialOffers">Special Offers</a>
+      <a routerLink="/specialOffer">Special Offers</a>
       <a routerLink="/contact">Contact us</a>
       
     </nav>
